# academia-orcid

./: .academia-orcid.yaml.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_bibtex.py  run_json.py  run_latex.py
.claude/: settings.json
src/academia_orcid/: __init__.py  bibtex_export.py  cli.py  config.py  enrich.py  extract.py  fetch.py  json_export.py  latex.py  logging_config.py  normalize.py  schema.py
tests/: conftest.py  test_bibtex_export.py  test_cli.py  test_cli_validation.py  test_compose_cv.py  test_config.py  test_enrich.py  test_extract.py  test_fetch.py  test_integration.py  test_json_export.py  test_latex.py  test_normalize.py
tools/: compose_cv.py  docx_formatter.py
tools/templates/: header.tex.template  main.tex.template  preamble.tex
